implement list clock history
